// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scene can add and remove light sources 1`] = `
Array [
   {
    "_events": Object {
      "change": Array [
        Object {
          "callback": [Function],
          "context": undefined,
          "ctx": [Circular],
          "listening": undefined,
        },
      ],
      "move": Array [
        Object {
          "callback": [Function],
          "context": undefined,
          "ctx": [Circular],
          "listening": undefined,
        },
      ],
    },
    "getBrightness": [Function],
    "getPosition": [Function],
    "getPositionX": [Function],
    "getPositionY": [Function],
    "getPositionZ": [Function],
    "getTravelDistance": [Function],
    "listenTo": [Function],
    "listenToOnce": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "setBrightness": [Function],
    "setPosition": [Function],
    "setPositionX": [Function],
    "setPositionY": [Function],
    "setPositionZ": [Function],
    "setTravelDistance": [Function],
    "stopListening": [Function],
    "translate": [Function],
    "translateX": [Function],
    "translateY": [Function],
    "translateZ": [Function],
    "trigger": [Function],
  },
]
`;

exports[`Scene can add and remove voxels 1`] = `
Array [
  Voxel {
    "_events": Object {
      "move": Array [
        Object {
          "callback": [Function],
          "context": undefined,
          "ctx": [Circular],
          "listening": undefined,
        },
      ],
    },
    "addToScene": [Function],
    "animDown": [Function],
    "animUp": [Function],
    "clone": [Function],
    "getAnimatedElement": [Function],
    "getDimension": [Function],
    "getDomElement": [Function],
    "getMesh": [Function],
    "getPosition": [Function],
    "getPositionX": [Function],
    "getPositionY": [Function],
    "getPositionZ": [Function],
    "listenTo": [Function],
    "listenToOnce": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "removeFromScene": [Function],
    "removeParentScene": [Function],
    "setDimension": [Function],
    "setMesh": [Function],
    "setParentScene": [Function],
    "setPosition": [Function],
    "setPositionX": [Function],
    "setPositionY": [Function],
    "setPositionZ": [Function],
    "stopListening": [Function],
    "translate": [Function],
    "translateX": [Function],
    "translateY": [Function],
    "translateZ": [Function],
    "trigger": [Function],
    "updateLightSource": [Function],
  },
]
`;

exports[`Scene can apply pan 1`] = `
Object {
  "x": 1,
  "y": 2,
  "z": 3,
}
`;

exports[`Scene can enable and disable pan 1`] = `
Object {
  "x": 0,
  "y": 0,
  "z": 0,
}
`;

exports[`Scene can enable and disable zoom 1`] = `1`;

exports[`Scene can get and set pan 1`] = `
Object {
  "x": 1,
  "y": 10,
  "z": 1000,
}
`;

exports[`Scene can get and set zoom 1`] = `1010`;

exports[`Scene can get and set zoom 2`] = `1010`;

exports[`Scene can get and set zoom 3`] = `1010`;

exports[`Scene can respond to mouse interaction 1`] = `5`;

exports[`Scene can respond to mouse interaction 2`] = `5`;

exports[`Scene can respond to mouse interaction 3`] = `
Object {
  "current": Object {
    "x": 0,
    "y": 0,
  },
  "shiftDown": false,
}
`;

exports[`Scene can respond to mouse interaction 4`] = `
Object {
  "current": Object {
    "x": 1000,
    "y": 1000,
  },
  "shiftDown": false,
}
`;

exports[`Scene can respond to mouse interaction 5`] = `
Object {
  "current": Object {
    "x": 1000,
    "y": 1000,
  },
  "shiftDown": false,
}
`;

exports[`Scene can respond to mouse interaction 6`] = `
Object {
  "x": 0,
  "y": 0,
  "z": 0,
}
`;

exports[`Scene can respond to mouse interaction 7`] = `
Object {
  "current": Object {
    "x": 1000,
    "y": 1000,
  },
  "shiftDown": false,
}
`;

exports[`Scene can respond to mouse interaction 8`] = `
Object {
  "x": -1.636246173744684,
  "y": 1.227184630308513,
  "z": 0,
}
`;

exports[`Scene can respond to mouse interaction 9`] = `
Object {
  "x": 0,
  "y": 0,
  "z": 0,
}
`;

exports[`Scene can respond to mouse interaction 10`] = `
Object {
  "x": -1.636246173744684,
  "y": 1.227184630308513,
  "z": 0,
}
`;

exports[`Scene can respond to mouse interaction 11`] = `
Object {
  "current": Object {
    "x": 1000,
    "y": 1000,
  },
  "shiftDown": true,
}
`;

exports[`Scene can respond to mouse interaction 12`] = `
Object {
  "x": 100,
  "y": 100,
  "z": 0,
}
`;

exports[`Scene can respond to mouse interaction 13`] = `
Object {
  "x": -1.636246173744684,
  "y": 1.227184630308513,
  "z": 0,
}
`;

exports[`Scene can respond to pressing and releasing SHIFT 1`] = `
Object {
  "current": Object {
    "x": 0,
    "y": 0,
  },
  "shiftDown": false,
}
`;

exports[`Scene can throw error when trying to attach when already attached 1`] = `undefined`;

exports[`Scene can throw error when trying to detach when already detached 1`] = `undefined`;
